# purser

./: .gitignore  .ralph-beads.example.yml  AGENTS.md  CLAUDE.md  HELLO.md  HELLO2.md  PROMPT_build.md  PROMPT_plan.md  README.md  beads-orchestrator-plan.md  grtsshbbvd4h8efp6ojeevp1negunace  init.ps1  init.sh  loop.sh  main.py  manifest  plgiberrfcjnn46ealjgjedtvre8bku8.darc  pyproject.toml  sqkhssmsndum7timppipqdc5euek1o8f
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/commands/: triage.md
.github/: copilot-instructions.md
docs/: consumer-repo-setup.md  purser-adoption-agent-template.md
scripts/: add_spec.py  cli_utils.py  config.py  gh-changelog.sh  gh-labels.sh  gh-pr-body.sh  gh-project.sh  gh-sync.sh  gh-triage.sh  gh_labels.py  gh_pr_body.py  gh_project.py  gh_project_setup.py  gh_remote.py  gh_sync.py  gh_triage.py  init.py  lib.py  loop.py  prereqs.py
specs/: 2026-04-23-pi-native-portable-purser-refactor.md  2026-04-27-purser-execution-reliability-and-structured-outcomes.md  fix-readme-architecture-diagram.md  loop-batch-mode.md  project-initialization.md  readme-chart-fixes.md  vscode-tasks-json.md
tests/: test_beads.py  test_beads_client.py  test_cli.py  test_cli_utils.py  test_config.py  test_detect.py  test_gh_project.py  test_gh_project_setup.py  test_gh_remote.py  test_init.py  test_loop.py  test_loop_end_to_end.py  test_outcomes.py  test_planner.py  test_prereqs.py  test_roles.py  test_runtime.py  test_scaffold.py  test_smoke.py  test_validation.py
(+32 files in other folders)
