[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purser"
version = "0.1.1"
description = "Project-agnostic Beads + Pi orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
purser = "purser.cli:main"
purser-planner-intake-spec = "purser.cli:planner_intake_spec_main"
purser-planner-plan = "purser.cli:planner_plan_main"
purser-exec-build = "purser.cli:exec_build_main"
purser-exec-build-all = "purser.cli:exec_build_all_main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
purser = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.11",
]
